--- a/src/EventTrackerAdminWeb/Views/Admin/_Members.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Admin/_Members.cshtml
@@ -6,89 +6,89 @@
 @model PagedList.IPagedList<EventTracker.BusinessModel.Membership.Member>
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css"/>
 
-<div class="panel-heading">Members
-</div>
-<div class="panel-body">
-    @*<table class="table table-striped table-condensed table-bordered">*@
-    <table class="table">
-        <tr>
-            <th class="text-center">
-                @Html.ActionLink("Last Name", "EditHousehold", new { householdId = ViewBag.HouseholdId, houseHoldLeaderMemberId = ViewBag.HouseHoldLeaderMemberId, sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
-            </th>
-            <th class="text-center">Firstname</th>
-            <th class="text-center">MemberOf</th>
-            <th>
-                @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span>", "Add", "AddMemberToHouseHold", "Admin", routeValues: new { houseHoldId = ViewBag.HouseHoldId, houseHoldLeaderMemberId = ViewBag.HouseHoldLeaderMemberId }, htmlAttributes: new { data_modal = "", @class = "btn btn-primary pull-right" })
-            </th>
-        </tr>
-        @foreach (var item in Model) {
+
+    <div class="panel-body">
+        @*<table class="table table-striped table-condensed table-bordered">*@
+        <table class="table">
             <tr>
-                <td>@Html.ActionLink(item.LastName, "EditMember", new { controller = "Admin", item.MemberId })</td>
-                <td class="text-right">@item.FirstName</td>
-                <td class="text-right">@item.MemberOf</td>
-                <td class="text-center">
-                    @if (item.IsHeadOfFamily) {
-                        using (Html.BeginForm("RemoveMemberFromHousehold", "Admin", new { memberId = item.MemberId, householdId = ViewBag.HouseHoldId })) {
-                            @Html.Hidden("MemberId", item.MemberId)
-                            <input type="submit"
-                                   class="btn btn-default btn-xs"
-                                   value="Remove" />
+                <th class="text-center">
+                    Members
+                </th>
+                <th class="text-center">&nbsp;</th>
+                <th class="text-center">
+                    @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span> Member", "Add", "AddMemberToHouseHold", "Admin", routeValues: new { houseHoldId = ViewBag.HouseHoldId, houseHoldLeaderMemberId = ViewBag.HouseHoldLeaderMemberId }, htmlAttributes: new { data_modal = "", @class = "btn btn-primary" })
+                </th>
+            </tr>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@Html.ActionLink(item.FullName, "EditMember", new { controller = "Admin", item.MemberId })</td>
+                    <td class="text-center">@item.MemberOf</td>
+                    <td class="text-center">
+                        @if (item.IsHeadOfFamily)
+                        {
+                            using (Html.BeginForm("RemoveMemberFromHousehold", "Admin", new { memberId = item.MemberId, householdId = ViewBag.HouseHoldId }))
+                            {
+                                @Html.Hidden("MemberId", item.MemberId)
+                                <input type="submit"
+                                       class="btn btn-default btn-xs"
+                                       value="Remove" />
+                            }
+                        }
+
+                    </td>
+                </tr>
+            }
+        </table>
+
+        <br />
+        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+        @Html.PagedListPager(Model, page => Url.Action("HouseholdMembers",
+        new { page, householdId = ViewBag.HouseholdId }))
+    </div>
+
+    <script type="text/javascript">
+
+
+        $(function () {
+
+            $.ajaxSetup({ cache: false });
+            $("a[data-modal]").on("click", function (e) {
+                // hide dropdown if any (this is used wehen invoking modal from link in bootstrap dropdown )
+                //$(e.target).closest('.btn-group').children('.dropdown-toggle').dropdown('toggle');
+                $('#myModalContent').load(this.href, function () {
+                    $('#myModal').modal({
+                        /*backdrop: 'static',*/
+
+                        keyboard: true
+                    }, 'show');
+                    bindForm(this);
+                });
+                return false;
+            });
+        });
+
+        function bindForm(dialog) {
+            $('form', dialog).submit(function () {
+                $.ajax({
+                    url: this.action,
+                    type: this.method,
+                    data: $(this).serialize(),
+                    success: function (result) {
+                        if (result.success) {
+                            $('#myModal').modal('hide');
+                            $('#replacetarget').load(result.url); //  Load data from the server and place the returned HTML into the matched element
+                        } else {
+                            $('#myModalContent').html(result);
+                            bindForm(dialog);
                         }
                     }
-
-                </td>
-            </tr>
+                });
+                return false;
+            });
         }
-    </table>
-
-    <br/>
-    Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
-
-    @Html.PagedListPager(Model, page => Url.Action("HouseholdMembers",
-        new {page, householdId = ViewBag.HouseholdId}))
-</div>
-
-<script type="text/javascript">
-
-    
-    $(function () {
-       
-        $.ajaxSetup({ cache: false });
-        $("a[data-modal]").on("click", function (e) {
-            // hide dropdown if any (this is used wehen invoking modal from link in bootstrap dropdown )
-            //$(e.target).closest('.btn-group').children('.dropdown-toggle').dropdown('toggle');
-            $('#myModalContent').load(this.href, function () {
-                $('#myModal').modal({
-                    /*backdrop: 'static',*/
-
-                    keyboard: true
-                }, 'show');
-                bindForm(this);
-            });
-            return false;
-        });
-    });
-
-    function bindForm(dialog) {
-        $('form', dialog).submit(function () {
-            $.ajax({
-                url: this.action,
-                type: this.method,
-                data: $(this).serialize(),
-                success: function (result) {
-                    if (result.success) {
-                        $('#myModal').modal('hide');
-                        $('#replacetarget').load(result.url); //  Load data from the server and place the returned HTML into the matched element
-                    } else {
-                        $('#myModalContent').html(result);
-                        bindForm(dialog);
-                    }
-                }
-            });
-            return false;
-        });
-    }
-</script>
+    </script>
 
 
 
