--- a/src/EventTrackerAdminWeb/Views/Admin/Members.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Admin/Members.cshtml
@@ -21,7 +21,7 @@
                             <div class="input-group">
                                 @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @class = "form-control", @placeholder = "name" })
                                 <span class="input-group-btn">
-                                    <button title="Click for search" type="submit" class="btn btn-info">
+                                    <button title="Click for search" type="submit" class="btn btn-info pull-right">
                                         <i class="glyphicon glyphicon-search"></i>
                                     </button>
                                 </span>
